break danceのデータを追加

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
       </div>
       <div
         class="common-section js-moving-man"
-        data-json="pirouette.json"
+        data-json="breakdance.json"
+        data-type="breakdance"
         id="breakdance"
       >
         <div class="common-section_inner">
-          <div class="common-section_title">PIROUETTE</div>
+          <div class="common-section_title">BREAK DANCE</div>
           <div class="moving-object">
             <div class="moving-object_box js-moving-box"></div>
           </div>
