エンドクレジットを追加

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li class="page-menu_item"><a href="#pirouette"></a></li>
       <li class="page-menu_item"><a href="#moonwalk"></a></li>
       <li class="page-menu_item"><a href="#breakdance"></a></li>
+      <li class="page-menu_item"><a href="#end"></a></li>
     </ul>
     <main class="common-main">
       <div
@@ -51,6 +52,20 @@
           <div class="common-section_title">BREAK DANCE</div>
           <div class="moving-object">
             <div class="moving-object_box js-moving-box"></div>
+          </div>
+        </div>
+      </div>
+      <div class="common-section" id="end">
+        <div class="common-section_inner">
+          <div class="common-section_title">END CREDIT</div>
+          <div class="moving-object">
+            <div class="moving-object_inner">
+              <div class="moving-object_dog" id="dog"></div>
+              <div class="moving-object_name">
+                <p>Animation: Momoko Okudaira</p>
+                <p>Coding: Tomohiro Yamanaka</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
